--- a/SecureCommunities_FinalProject/Dataframe_Creation/FinalProject_Regression.ipynb
+++ b/SecureCommunities_FinalProject/Dataframe_Creation/FinalProject_Regression.ipynb
@@ -43,10 +43,10 @@
       "metadata": {
         "id": "_BxqTug0uJUx",
         "colab_type": "code",
-        "outputId": "4645eb82-325f-4ca3-8507-e34ad61559a8",
+        "outputId": "5903dff0-3283-454b-b06f-bc2c56973a33",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 867
+          "height": 986
         }
       },
       "source": [
@@ -56,59 +56,66 @@
         "sc_arrests = pd.read_excel('https://raw.githubusercontent.com/mgmills93/AEM_Spring_2019/master/enforcement/Secure_Communities_2017_Deportations.xlsx', header=4)\n",
         "print(sc_arrests.sample(5))"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "      State    County Departed Date                      Port Of Departure  \\\n",
-            "1125     AZ      Pima    2015-01-12                       NOGALES, AZ, POE   \n",
-            "42525    TX  Brewster    2017-03-17                       DEL RIO, TX, POE   \n",
-            "40588    NM    Cibola    2017-02-02                     HARLINGEN, TX, POE   \n",
-            "99125    CA    Orange    2016-07-21                       EL PASO, TX, POE   \n",
-            "280      WI     Brown    2016-04-12  ALEXANDRIA INTERNATIONAL AIRPORT, POE   \n",
+            "      State    County Departed Date  \\\n",
+            "77543    NM    Cibola    2016-07-16   \n",
+            "19780    NM  Sandoval    2016-06-17   \n",
+            "53277    TX    Brazos    2015-07-09   \n",
+            "87810    TX   Wharton    2015-01-07   \n",
+            "62694    TX    Reeves    2017-01-07   \n",
             "\n",
-            "      Departed To Country                           Case Status  \\\n",
-            "1125               MEXICO  8-Excluded/Removed - Inadmissibility   \n",
-            "42525              MEXICO  8-Excluded/Removed - Inadmissibility   \n",
-            "40588              MEXICO    6-Deported/Removed - Deportability   \n",
-            "99125              MEXICO    6-Deported/Removed - Deportability   \n",
-            "280                MEXICO    6-Deported/Removed - Deportability   \n",
+            "                                  Port Of Departure Departed To Country  \\\n",
+            "77543                           EAGLE PASS, TX, POE              MEXICO   \n",
+            "19780                              DEL RIO, TX, POE              MEXICO   \n",
+            "53277  NEWARK INTERNATIONAL AIRPORT, NEWARK NJ, POE               INDIA   \n",
+            "87810                              HOUSTON, TX, POE           GUATEMALA   \n",
+            "62694                           EAGLE PASS, TX, POE              MEXICO   \n",
             "\n",
-            "                                   Case Category Processing Disposition Code  \\\n",
-            "1125                 [16] Reinstated Final Order                      REINST   \n",
-            "42525                [16] Reinstated Final Order                      REINST   \n",
-            "40588                [16] Reinstated Final Order                           T   \n",
-            "99125                [16] Reinstated Final Order                      REINST   \n",
-            "280    [11] Administrative Deportation / Removal                      ADMDPT   \n",
+            "                                Case Status  \\\n",
+            "77543  8-Excluded/Removed - Inadmissibility   \n",
+            "19780    6-Deported/Removed - Deportability   \n",
+            "53277    6-Deported/Removed - Deportability   \n",
+            "87810    6-Deported/Removed - Deportability   \n",
+            "62694  8-Excluded/Removed - Inadmissibility   \n",
             "\n",
-            "          Final Order Date Charge Code  ... Conviction Dt Sentence Days Qty  \\\n",
-            "1125   2014-12-16 00:00:00        I9C2  ...    2014-12-15              30.0   \n",
-            "42525  2003-11-08 00:00:00        I7A1  ...    2016-04-21               NaN   \n",
-            "40588  2005-07-17 00:00:00        I9C2  ...    2016-06-28               NaN   \n",
-            "99125  2016-06-29 00:00:00        I9A2  ...    2014-03-19               NaN   \n",
-            "280    2017-03-24 00:00:00         I6A  ...           NaT               NaN   \n",
+            "                                       Case Category  \\\n",
+            "77543                         [8F] Expedited Removal   \n",
+            "19780      [11] Administrative Deportation / Removal   \n",
+            "53277  [3] Deportable - Administratively Final Order   \n",
+            "87810                    [16] Reinstated Final Order   \n",
+            "62694                    [16] Reinstated Final Order   \n",
             "\n",
-            "      Sentence Months Qty Sentence Years Qty Removal Case COL  \\\n",
-            "1125                  NaN                NaN              3.0   \n",
-            "42525                18.0                NaN              1.0   \n",
-            "40588               180.0                NaN              2.0   \n",
-            "99125                 NaN                6.0              1.0   \n",
-            "280                   NaN                NaN              NaN   \n",
+            "      Processing Disposition Code     Final Order Date Charge Code  ...  \\\n",
+            "77543                          ER  2016-01-18 00:00:00        I7A1  ...   \n",
+            "19780                      ADMDPT  2016-04-06 00:00:00        R2A3  ...   \n",
+            "53277                      WA/NTA  2015-03-21 00:00:00         R1B  ...   \n",
+            "87810                      REINST  2014-12-11 00:00:00        I9A2  ...   \n",
+            "62694                      REINST  2013-09-05 00:00:00        I9A2  ...   \n",
             "\n",
-            "         Aggravated Felon Type Book In Date Book Out Date Release Reason  \\\n",
-            "1125   Not an Aggravated Felon   2015-01-12    2015-01-12        Removed   \n",
-            "42525  Not an Aggravated Felon   2017-03-17    2017-03-17        Removed   \n",
-            "40588  Not an Aggravated Felon   2016-12-22    2017-02-02        Removed   \n",
-            "99125  Not an Aggravated Felon   2016-06-28    2016-07-21        Removed   \n",
-            "280    Not an Aggravated Felon   2017-03-19    2017-04-12        Removed   \n",
+            "      Conviction Dt Sentence Days Qty Sentence Months Qty Sentence Years Qty  \\\n",
+            "77543    2016-01-26             180.0                 NaN                NaN   \n",
+            "19780    2014-09-17               NaN                37.0                NaN   \n",
+            "53277    2015-02-18             250.0                 NaN                NaN   \n",
+            "87810    2014-12-09               NaN                 4.0                NaN   \n",
+            "62694    1999-04-08               NaN                 NaN                5.0   \n",
             "\n",
-            "                              Case ID  \n",
-            "1125   (b)(6), (b)(7)(c ), (b)(7)(e )  \n",
-            "42525  (b)(6), (b)(7)(c ), (b)(7)(e )  \n",
-            "40588  (b)(6), (b)(7)(c ), (b)(7)(e )  \n",
-            "99125  (b)(6), (b)(7)(c ), (b)(7)(e )  \n",
-            "280    (b)(6), (b)(7)(c ), (b)(7)(e )  \n",
+            "      Removal Case COL    Aggravated Felon Type Book In Date Book Out Date  \\\n",
+            "77543              3.0  Not an Aggravated Felon   2016-07-15    2016-07-15   \n",
+            "19780              1.0  Not an Aggravated Felon   2016-06-17    2016-06-17   \n",
+            "53277              3.0  Not an Aggravated Felon   2015-06-19    2015-07-09   \n",
+            "87810              2.0  Not an Aggravated Felon   2014-12-11    2015-01-07   \n",
+            "62694              1.0  Not an Aggravated Felon   2017-01-06    2017-01-06   \n",
+            "\n",
+            "      Release Reason                         Case ID  \n",
+            "77543        Removed  (b)(6), (b)(7)(c ), (b)(7)(e )  \n",
+            "19780        Removed  (b)(6), (b)(7)(c ), (b)(7)(e )  \n",
+            "53277        Removed  (b)(6), (b)(7)(c ), (b)(7)(e )  \n",
+            "87810        Removed  (b)(6), (b)(7)(c ), (b)(7)(e )  \n",
+            "62694        Removed  (b)(6), (b)(7)(c ), (b)(7)(e )  \n",
             "\n",
             "[5 rows x 30 columns]\n"
           ],
@@ -144,7 +151,7 @@
       "metadata": {
         "id": "PAEfKbSFvDxr",
         "colab_type": "code",
-        "outputId": "7e002557-ae70-4d97-d10c-551587a0db86",
+        "outputId": "2ef254fb-8bfe-4cd7-a768-5960baf39a7c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 2176
@@ -156,7 +163,7 @@
         "cs_group['County_State'] = cs_group['County'].map(str) + ', ' + cs_group['State']\n",
         "print(cs_group)"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,14 +315,14 @@
       "metadata": {
         "id": "0tLRidyb2mXO",
         "colab_type": "code",
-        "outputId": "5fe96e47-92b4-4b9e-cc6b-0d75379af844",
+        "outputId": "9ba90c66-b1d4-47a4-b70d-3df222bd0f03",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         }
       },
       "source": [
-        "hisp_counties = pd.read_csv('https://raw.githubusercontent.com/mgmills93/AEM_Spring_2019/master/SecureCommunities_FinalProject/Datasets/ACS_16_5YR_B03001_with_ann_copy.csv', encoding='latin-1', header=1)\n",
+        "hisp_counties = pd.read_csv('https://raw.githubusercontent.com/mgmills93/AEM_Spring_2019/master/demographics/ACS_16_5YR_B03001_with_ann_copy.csv', encoding='latin-1', header=1)\n",
         "geo_pop = hisp_counties.loc[:, 'Geography':'Estimate; Total: - Hispanic or Latino:']\n",
         "\n",
         "new = geo_pop['Geography'].str.split(', ', n=1, expand=True)\n",
@@ -389,7 +396,7 @@
         "print(geo_pop.tail(10))\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -427,14 +434,14 @@
       "metadata": {
         "id": "avQ_LZNf894N",
         "colab_type": "code",
-        "outputId": "22e94039-eff7-4f9e-a3a7-fe04d18a2dab",
+        "outputId": "fa697154-ac78-497f-8906-9d69f9d7d35d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1444
         }
       },
       "source": [
-        "asj_data = pd.read_stata('https://raw.githubusercontent.com/mgmills93/AEM_Spring_2019/master/SecureCommunities_FinalProject/Datasets/37135-0001-Data(2016ASJ_copy.dta')\n",
+        "asj_data = pd.read_stata('https://raw.githubusercontent.com/mgmills93/AEM_Spring_2019/master/detention_centers/37135-0001-Data(2016ASJ_copy.dta')\n",
         "list(asj_data)\n",
         "\n",
         "asj_cols = asj_data.loc[:,['COUNTY', 'STATE', 'NONCITZ']]\n",
@@ -444,7 +451,7 @@
         "#print(asj_cols)\n",
         "asj_cols.groupby('STATE').count().reset_index()\n"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -754,7 +761,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 8
         }
       ]
     },
@@ -773,7 +780,7 @@
       "metadata": {
         "id": "Zb5K8zKNRlZG",
         "colab_type": "code",
-        "outputId": "269a4959-aa0a-4ba7-c2cb-f83e069bc7fa",
+        "outputId": "78ce1714-2fca-4a2b-9524-713274d35092",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -790,7 +797,7 @@
         "\n",
         "print(voting_cols.tail(5))"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -821,7 +828,7 @@
       "metadata": {
         "id": "eEx9EuF7UCHp",
         "colab_type": "code",
-        "outputId": "3e53d5d3-32c1-4d5f-dc9b-1ee34676db3e",
+        "outputId": "da44c63f-2912-47f4-c063-49fdaa2c98b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -937,17 +944,17 @@
         "cs_hisp_vote.fillna(method='ffill', inplace=True)\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "      Arrest_Number   County_State  Percent_Hispanic   per_gop State\n",
-            "606               8     Branch, MI          4.334564  0.668587    MI\n",
-            "1318              2       Ward, TX         51.386451  0.744506    TX\n",
-            "1091              2     Morgan, TN          1.143489  0.814676    TN\n",
-            "1180              6     Fannin, TX         10.415618  0.796525    TX\n",
-            "171              45  New Haven, CT         16.790959  0.421307    CT\n"
+            "1447              8  Sheboygan, WI          5.975588  0.555293    WI\n",
+            "368               1     Benton, IA          1.380249  0.705802    IN\n",
+            "1307             39  Tom Green, TX         38.062513  0.718455    TX\n",
+            "1351             36       Utah, UT         11.152351  0.513056    UT\n",
+            "1386              6     Orange, VA          4.209560  0.612636    VA\n"
           ],
           "name": "stdout"
         }
@@ -958,7 +965,7 @@
       "metadata": {
         "id": "-fh_FBRvNS5s",
         "colab_type": "code",
-        "outputId": "0d61186d-c295-4fbf-f622-8efce2c82d4a",
+        "outputId": "10d3ee0d-71bd-448e-ccc0-57de26a8d59a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
@@ -970,7 +977,7 @@
         "print(cs_hisp_vote.tail(5))\n",
         "cs_hisp_vote.to_csv('regression_set.csv')"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
