--- a/SecureCommunities_FinalProject/Dataframe_Creation/FinalProject_Trump.ipynb
+++ b/SecureCommunities_FinalProject/Dataframe_Creation/FinalProject_Trump.ipynb
@@ -3,10 +3,11 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of FinalProject_Trump",
+      "name": "FinalProject_Trump",
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,15 +23,15 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mgmills93/AEM_Spring_2019/blob/master/SecureCommunities_FinalProject/FinalProject_Trump.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mgmills93/AEM_Spring_2019/blob/master/SecureCommunities_FinalProject/Dataframe_Creation/FinalProject_Trump.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "g0gomnjD7cQq",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "### Question 1:\tIs there a “Trump Effect” in SC arrests overall? \n",
         "---\n",
@@ -38,12 +39,12 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "yHe43UyYLPi7",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -58,13 +59,14 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "jq6Hh2buT2Qi",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
+        "trump_columns = t_isolate(sc_arrests)\n",
         "def time(trump_columns):\n",
         "  trump_columns['Year'] = pd.DatetimeIndex(trump_columns['Departed Date']).year\n",
         "  trump_columns['Month'] = pd.DatetimeIndex(trump_columns['Departed Date']).month\n",
@@ -74,12 +76,12 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "Xuzl_PjVxYwX",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "def my_sort(trump_columns):\n",
         "  t_my = trump_columns.groupby('Month_Year').count()\n",
@@ -91,22 +93,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "hq_8myty7xL4",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "###Pipeline"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "lTW0RrtbvS1a",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "#isolate columns of interest from main dataset\n",
         "t_isolate(sc_arrests)\n",
